--- a/os-harpistas.html
+++ b/os-harpistas.html
@@ -20,7 +20,7 @@
   Sua fundação inicial data de 324 DR, inicialmente formada por líderes militares élficos de <i>Myth Drannan</i> junto com alguns poucos patrulheiros e druidas humanos de confiança. Em seu conselho estava o (relativamente) jovem <a href="https://forgottenrealms.fandom.com/wiki/Elminster" target="_blank">Elmister Aumar</a> e inicialmente protegiam os elfos das ameaças dos fiéis de Banes, Baal, Loviatar, Malar e Myrkul. A facção se desfez várias vezes ao longo das eras, retornando novamente de uma forma ou de outra.
   </p>
   <p>
-Após a ressurreição de Mystra, <a href="https://forgottenrealms.fandom.com/wiki/Storm_Silverhand">Storm Silverhand</a> começou a reviver os Harpistas em <i>Cormyr</i>. Paralelamente, muitos grupos ao redor dos Reinos se intitulavam Harpistas. Durante o Conselho de Waterdeep, <a href="https://forgottenrealms.fandom.com/wiki/Remallia_Haventree" target="_blank">Remallia “Remi” Haventree</a> representou os ideais Harpistas e contribuiu com sua rede de informantes e espiões.
+Após a ressurreição de Mystra, <a href="https://forgottenrealms.fandom.com/wiki/Storm_Silverhand" target="_blank">Storm Silverhand</a> começou a reviver os Harpistas em <i>Cormyr</i>. Paralelamente, muitos grupos ao redor dos Reinos se intitulavam Harpistas. Durante o Conselho de Waterdeep, <a href="https://forgottenrealms.fandom.com/wiki/Remallia_Haventree" target="_blank">Remallia “Remi” Haventree</a> representou os ideais Harpistas e contribuiu com sua rede de informantes e espiões.
   </p>
   <h2>
   Organização
