Corrigindo erro de target

--- a/os-harpistas.html
+++ b/os-harpistas.html
@@ -3,7 +3,7 @@
 <!-- Essa pagina foi inspirada no conteudo do site rollando20 -->
 <head>
   <meta charset="utf-8">
-    <title>Titulo Generico</title>
+    <title>Os Harpistas</title>
 </head>
 <body>
   <a href="https://forgottenrealms.fandom.com/wiki/Harpers" target="_blank">
