--- a/cadastro-simples.html
+++ b/cadastro-simples.html
@@ -38,9 +38,9 @@
           <font size="-1"><i> (Sim, isso é importante!)</i></font><br />
           Pouca<input type="range" min="-10" max="10" id="user-range" name="range"/>Muita
          <p>
-          <label for="user-input_password"><b>Senha</b></label><br />
+          <label for="user-input-password" required><b>Senha</b></label><br />
           <i>A senha precisa de uma letra maiuscula e um numero.</i><br />
-          <input type="password" id="user-input_password" name="passowrd" />
+          <input type="password" id="user-input-password" name="password" />
         </p>
         <p>
           Finalizou?
