Formulario está perfeito!

--- a/cadastro-simples.html
+++ b/cadastro-simples.html
@@ -18,7 +18,7 @@
           </p>
           <p>
             <label for="user-input-email"><b>E-mail</b></label><br />
-            <input type="text" id="user-input-email" name="input-email" title="Preencha esse campo com o seu e-mail" required /><br />
+            <input type="text" id="user-input-email" name="input-email" title="Preencha esse campo com o seu e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required /><br />
           </p>
           <p>
             <b>Sexo:  </b><br />
