--- a/cadastro-simples.html
+++ b/cadastro-simples.html
@@ -57,7 +57,7 @@
           <input type="checkbox" id="user-checkbox" name="checkbox" title="É sério, eu pago." />
           <p>
             Finalizou?
-            <input type="submit" id="user-button-submit" name="submit" value="Concluido" />. Não?<br />
+            <input type="submit" id="user-button-submit" name="submit" value="Concluido" /> Não?<br />
             Precisa limpar os campos?
             <input type="reset" value="Limpar">
           </p>
