Coloquei uma virgulha

--- a/cadastro-simples.html
+++ b/cadastro-simples.html
@@ -47,7 +47,7 @@
               </p>
               <p>
                 <label for="user-input-password"><b>Senha*</b></label><br />
-                <input type="password" id="user-input-password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4}" title="Preencha com uma senha que você vai lembrar, por favor!" required/><br />
+                <input type="password" id="user-input-password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" title="Preencha com uma senha que você vai lembrar, por favor!" required/><br />
                 <font size="-1"><i>A senha precisa de uma letra maiuscula<br /> e um numero.</i></font><br />
               </p>
             </th>
