--- a/cadastro-simples.html
+++ b/cadastro-simples.html
@@ -9,9 +9,10 @@
   
   <body>
      <fieldset style="background-color:#EDFDFF; text-align: center; width: 600px">
-      <strong><font  style="color:#507A80;" size="+3"><p>CADASTRO PARA COMER LANCHE<br /></font></strong>
+     <p>
+      <strong><font style="color:#507A80;" size="+3">CADASTRO PARA COMER LANCHE</font></strong><br />
         Campos com " * " são obrigatorios.
-        </p>
+     </p>
         <form>
           <table Style="text-align: center;">
             <tr>
