--- a/cadastro-simples.html
+++ b/cadastro-simples.html
@@ -4,30 +4,36 @@
   <head>
     <meta charset="utf-8">
       <title>Cadastro</title>
-      
+      <style>
+        .content {
+            max-width: 500px;
+            margin: auto;
+        }
+        </style>
   </head>
   
   <body>
-     <fieldset style="background-color:#EDFDFF; text-align: center; width: 600px">
-     <p>
+    <div class="content">
+    <fieldset style="background-color:#EDFDFF; text-align: center; width: 600px">
+    <p>
       <strong><font style="color:#507A80;" size="+3">CADASTRO PARA COMER LANCHE</font></strong><br />
         Campos com " * " são obrigatorios.
-     </p>
-        <form>
-          <table Style="text-align: center;">
-            <tr>
+    </p>
+      <form>
+        <table Style="text-align: center;">
+          <tr>
             <th>
-    	        <p>
+              <p>
                 <label for="user-input"><b>Nome*</b></label><br />
-                <input type="text" id="user-input" name="input" title="Preencha esse campo com o seu nome" required />
+                <input type="text" id="user-input" name="input" placeholder="Digite aqui seu nome" title="Preencha esse campo com o seu nome" required />
               </p>
               <p>
                 <label for="user-input-email"><b>E-mail*</b></label><br />
-                <input type="text" id="user-input-email" name="input-email" title="Preencha esse campo com o seu e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required /><br />
+                <input type="text" id="user-input-email" name="input-email" placeholder="Digite aqui seu E-mail" title="Preencha esse campo com o seu e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required /><br />
               </p>
-		        </th>
+            </th>
             <th>
-    	        <p>
+              <p>
                 <b>Sexo:</b><br />
                 <input type="radio" id="user-radio" name="radio" title="Você se considera do sexo masculino?" />
                 <label for="user-radio">Masc</label>
@@ -44,16 +50,16 @@
             <th>
               <p>
                 <label for="user-range"><b>Sua fome no momento*</b></label><br />
-                Pouca<input type="range" min="-10" max="10" id="user-range" name="range" title="Eu estou com fome e você?" />Muita
+                  Pouca<input type="range" min="-10" max="10" id="user-range" name="range" title="Eu estou com fome e você?" />Muita
               </p>
               <p>
                 <label for="user-input-password"><b>Senha*</b></label><br />
-                <input type="password" id="user-input-password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" title="Preencha com uma senha que você vai lembrar, por favor!" required/><br />
-                <font size="-1"><i>A senha precisa de uma letra maiuscula<br /> e um numero.</i></font><br />
+                <input type="password" id="user-input-password" name="password" placeholder="Digite aqui sua Senha" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" title="Preencha com uma senha que você vai lembrar, por favor!" required/><br />
+                  <font size="-1"><i>A senha precisa de uma letra maiuscula<br /> e um numero.</i></font><br />
               </p>
             </th>
-            </tr>
-          </table>
+          </tr>
+        </table>
           <label for="user-checkbox"><b>Ta afim de um lanche?</b></label>
           <input type="checkbox" id="user-checkbox" name="checkbox" title="É sério, eu pago." />
           <p>
@@ -64,5 +70,6 @@
           </p>
         </form>
       </fieldset>
+    </div>
   </body>
 </html>
