--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>This is the place use to surf by my folders</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Dont know yet</title>
+    </head>
+    <body>
+        <h1>This is the place use to surf by my folders</h1>
+        <div>
+            <p><a href="audio-video.html">Brincando com as Tags Audio e Video</p></a>
 
-</body>
+        </div>
+
+    </body>
 </html>
