--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
             <p><a href="audio-video.html">Brincando com as Tags Audio e Video</p></a>
 
         </div>
+        <div>
+            <p><a href="cadastro-simples.html">Brincando com o Forms </a></p>
+        </div>
+        <div>
+            <p><a href="os-harpistas.html">Brincando com o desgin do site</a></p>
+        </div>
+        <div>
+            <p><a href="Brincando com a tag table">Brincando com a Tag table</a></p>
+        </div>
+        <div>
+            <p><a href="login.html">Tentando fazer uma pagina de login</a></p>
+        </div>
 
     </body>
 </html>
