--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p><a href="os-harpistas.html">Brincando com o desgin do site</a></p>
         </div>
         <div>
-            <p><a href="Brincando com a tag table">Brincando com a Tag table</a></p>
+            <p><a href="html1.html">Brincando com a Tag table</a></p>
         </div>
         <div>
             <p><a href="login.html">Tentando fazer uma pagina de login</a></p>
