--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <title>Cadastro</title>
     <style>
       body{
-        background-image: linear-gradient(25deg, rgb(0, 9, 128), rgb(11, 44, 192));
+        background-image:linear-gradient(25deg, #48bd82, #a3bd48);
         background-size: cover;
         background-attachment: fixed;
       }
@@ -23,11 +23,11 @@
       .form-login{
         width: 300px;
         height: 350px;
-        background: rgb(0, 1, 44);
+        background: #435557;
         text-align: center;
         padding: 25px;
         border-radius: 20px;
-        box-shadow: rgb(17 57 132) 4px 6px 5px 2px;
+        box-shadow: #10260f6b 4px 6px 5px 2px;
       }
 
       #logo-login{
@@ -47,7 +47,7 @@
         width: 295px;
         height: 30px;
         padding: 5px;
-        background: rgba(9, 1, 78, 0.993);
+        background: #53B04B;
         border-radius: 60px;
         margin-bottom: 10px;
       }
@@ -74,12 +74,12 @@
         margin-top: 15px;
         width: 200px;
         height: 35px;
-        background-color: rgb(83 176 75);
+        background-color: #24312b;
         border-radius: 50px;
         cursor:pointer;
       }
       .custom-btn-sign-up:hover, .custom-btn:hover{
-        background-color: yellowgreen;
+        background-color: #53B04B;
       }
 
       #form-btn-sign-up, #form-btn{
@@ -122,6 +122,8 @@
         </div>
       </form>
     </div>
-
+    <div>
+      
+    </div>
   </body>
 </html>
