--- a/login.html
+++ b/login.html
@@ -6,6 +6,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,500;1,900&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="Pagina de Login" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="L Gustavo brincando no front-end" />
+    <meta property="og:url" content="https://lgustavorcaldas.github.io/alpha-ed-tech/login.html" />
+    <meta property="og:image" content="https://github.com/lgustavorcaldas/alpha-ed-tech/blob/main/assets/logo.svg" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image" content="https://github.com/lgustavorcaldas/alpha-ed-tech/blob/main/assets/logo.svg" />
+
     <title>Cadastro</title>
     <style>
       body{
