--- a/login.html
+++ b/login.html
@@ -11,10 +11,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="L Gustavo brincando no front-end" />
     <meta property="og:url" content="https://lgustavorcaldas.github.io/alpha-ed-tech/login.html" />
-    <meta property="og:image" content="https://github.com/lgustavorcaldas/alpha-ed-tech/blob/main/assets/logo.svg" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/84547544/137028765-4db2f3dd-f76a-4d8c-835a-2f191d3cdbca.png" />
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
-    <meta property="og:image" content="https://github.com/lgustavorcaldas/alpha-ed-tech/blob/main/assets/logo.svg" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/84547544/137028765-4db2f3dd-f76a-4d8c-835a-2f191d3cdbca.png" />
 
     <title>Cadastro</title>
     <style>
