--- a/login.html
+++ b/login.html
@@ -25,9 +25,8 @@
       }
 
       .container{
-        margin: 0 auto;
-        margin-top: 75px;
-        width: 350px;
+        display: grid;
+        place-items: center;
       }
 
       .form-login{
