--- a/audio-video.html
+++ b/audio-video.html
@@ -45,7 +45,7 @@
             margin-top: 20px;
             color: #dddddd;
             background: #5E5E5E;
-            width: 550px;
+            width: 55 0px;
             padding: 10px;
             height: auto;
             border-radius: 45px;
