--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dont know yet</title>
+        <title>Meus Projetos Alpha Ed/tech</title>
+        <!--Boxicon.com-->
+        <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+        <!--GoogleFonts-->
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+            *{
+                margin: 0;
+                padding: 0;
+                box-sizing: 0;
+                font-family: 'Poppins', sans-serif;
+            }
+            .primeiro{
+                
+            }
+
+
+        </style>       
+
     </head>
     <body>
-        <h1>This is the place use to surf by my folders</h1>
-        <div>
-            <p><a href="audio-video.html">Brincando com as Tags Audio e Video</p></a>
-
+        <h1 style="font-size: 30px;">This is the place use to surf by my folders!</h1>
+        <div class="primeiro">
+            <i class='bx bx-video'></i>
+            <a href="audio-video.html">Brincando com as Tags Audio e Video</a>
         </div>
         <div>
             <p><a href="cadastro-simples.html">Brincando com o Forms </a></p>
