--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         <div>
             <p><a href="site.html">Aqui eu fiz um site daora</a></p>
         </div>
+        <div>
+            <p><a href="iframe.html">Testando um pouco o iframe</a></p>
+        </div>
+        <div>
+            <p><a href="canvas.html">Aqui é uma brincadeira com canvas</a></p>
+        </div>
 
     </body>
 </html>
