--- a/canvas.html
+++ b/canvas.html
@@ -8,25 +8,29 @@
     <style>
         canvas{
             background-color: #918080;
+            border-radius: 20px;
         }
-        body{
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
+       div{
+           text-align: center;
+           margin: 0 auto;
+           padding: 0;
+       }
     </style>
 
 </head>
 <body>
     <div>
-        <label>Width</label>
-        <input type="range" id="caWidth" min="108" max="1080" value="960" />
-        <label>Height</label>
-        <input type="range" id="caHeight" min="108" max="1080" value="960" /><br />
+        <h1>Testando o Canvas</h1>
+        <p>Aumente o quadro cinza e clique nele.</p>
+        <label>Largura</label>
+        <input type="range" id="caWidth" min="108" max="1080" value="540" />
+        <label>Altura</label>
+        <input type="range" id="caHeight" min="108" max="540" value="270" /><br />
 
         <canvas id="sandbox">
             Your browser does not support the HTML5 canvas tag :c
         </canvas>
+        <p><a href="index.html">Voltar</a></p>
     </div>  
 
     <script>
