--- a/canvas.html
+++ b/canvas.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="Demonstracao de Canvas" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Algumas bolinhas pulando" />
+    <meta property="og:url" content="https://lgustavorcaldas.github.io/alpha-ed-tech/canvas.html" />
+    <meta property="og:image" content="https://lgustavorcaldas.github.io/alpha-ed-tech/midia/canvasIMG.jpg" />
+
     <title>Bolas e + bolas</title>
+
     <style>
         canvas{
             background-color: #918080;
             border-radius: 20px;
         }
        div{
-           text-align: center;
            margin: 0 auto;
+           text-align: center;
            padding: 0;
        }
     </style>
