--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div>
             <p><a href="canvas.html">Aqui é uma brincadeira com canvas</a></p>
         </div>
+        <div>
+            <p><a href="cc-teste/css-teste.html">Barra interativa</a></p>
+        </div>
 
     </body>
 </html>
