--- a/cc-teste/css-teste.html
+++ b/cc-teste/css-teste.html
@@ -12,7 +12,7 @@
             <ul class="navbar-nav">
                 <li class="logo">
                     <a href="#" class="nav-link">
-                      <span class="link-text logo-text">Fireship</span>
+                      <span class="link-text logo-text">Amizade</span>
                       <svg
                         aria-hidden="true"
                         focusable="false"
@@ -190,7 +190,7 @@
         <main>
             <h1>Lorem Ipsum</h1>
 
-            <p>
+            <p class="corpo">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id malesuada lectus. Duis quis imperdiet enim. Sed tincidunt turpis convallis nibh viverra commodo. Sed id pharetra leo. Curabitur quis mauris sed risus blandit tincidunt et at leo. Sed posuere molestie metus eget tincidunt. Donec mattis velit quis sapien dictum ultrices. Proin cursus suscipit neque. Mauris faucibus velit sed dui iaculis, ut finibus orci faucibus. Suspendisse ut purus sit amet libero ultricies fringilla. Morbi rhoncus justo elit, in ultrices arcu consectetur eget. Mauris a convallis velit. Aenean varius eget diam hendrerit consectetur. Cras id ultricies mauris, vitae imperdiet arcu. Integer congue dignissim erat et mollis. Phasellus nec pharetra sem.<br /><br />
 
                 Praesent ultrices condimentum est, vitae feugiat eros fringilla non. Proin consequat vel nibh at convallis. Nam fermentum est dolor, a imperdiet neque lacinia ut. Curabitur vestibulum venenatis nibh, egestas vestibulum neque interdum ac. Nulla porttitor tortor at vestibulum sollicitudin. Curabitur efficitur, felis quis fermentum pulvinar, neque lectus viverra arcu, sit amet lobortis eros augue a mauris. Maecenas dui ex, interdum sit amet facilisis tristique, sodales eu justo.<br /><br />
