--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <div>
             <p><a href="cc-teste/css-teste.html">Barra interativa</a></p>
         </div>
+        <div>
+            <p><a href="parallax/testando.html">Parallax</a></p>
+        </div>
 
     </body>
 </html>
