--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <div>
             <p><a href="parallax/testando.html">Parallax</a></p>
         </div>
+        <div>
+            <p><a href="curriculo/index.html">Curriculo</a></p>
+        </div>
 
     </body>
 </html>
