--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -55,13 +55,13 @@
                     <h1>Sobre mim.</h1><br />
                     <span>Me chamo <b>Luiz Gustavo Caldas</b>, nascido em abril de 1999 em Guaratinguetá, desde sempre tenho uma curiosidade insaciável, sempre querendo aprender mais sobre todas as diversas áreas e conseguir formas de aplicar isso na vida cotidiana.<br />
                     O <b>amor com a tecnologia</b> veio desde novo e quando percebi que como ela poderia afetar positivamente a vida de muitas pessoas eu quis aprender o mais rápido o possível, infelizmente o curso que fiz quando novo <b>não alimentou esse amor</b>, e com isso ele ficou adormecido até anos atrás.<br />
-                    Atualmente com o amor renascido no peito estudo no <b><a href="https://www.alphaedtech.org.br/">Alpha Ed/tech</a></b>, um projeto igualmente apaixonado pela tecnologia que procura <b>transformar vidas graças a tecnologia</b>. 
+                    Atualmente com o amor renascido no peito estudo no <b><a href="https://www.alphaedtech.org.br/">Alpha Ed/tech</a></b>, um projeto igualmente apaixonado pela tecnologia que procura <b>transformar vidas graças à tecnologia</b>. 
                     </span>
                 </div>
                 <div class="line"></div>
                 <div class="experiencias">
                     <h1>Experiencias.</h1><br />
-                    <span><b>Estudei em escolas públicas</b> a vida toda, obtive uma ascensão de ensino durante a troca do Ensino Fundamental para o Médio, onde graças a uma <b>bolsa da BASF</b>(que presenteou os alunos do ensino fundamental com melhores notas da cidade) eu consegui fazer um curso preparatório e prestar o vestibular para o <b>CTIG(uma das melhores escolas do país)</b>. <br />
+                    <span><b>Estudei em escolas públicas</b> a vida toda, obtive uma ascensão de ensino durante a troca do Ensino Fundamental para o Médio, onde graças a uma <b>bolsa da BASF</b> (que presenteou os alunos do ensino fundamental com melhores notas da cidade) eu consegui fazer um curso preparatório e prestar o vestibular para o <b>CTIG (uma das melhores escolas do país)</b>. <br />
                     Fiz o ensino médio juntamente com o <b>técnico em mecânica</b>, porém mecânica não era o que eu queria, fui para o mercado de trabalho e fiz cursos diversos durante esse tempo, porém o que me empregou foi um <b>curso de design gráfico feito em 2012</b>.<br />
                     <ul>
                         <li><h4>NSA logística - (dezembro/2019 a abril/2020) - Lorena</h4>
@@ -84,7 +84,7 @@
                     <h1>Habilidades.</h1>
                     <span>
                         <h3>Avançado:</h3>
-                        Photoshop, Inglês(fluência), Internet, MS Office e Windows.<br />
+                        Photoshop, Inglês (fluência), Internet, MS Office e Windows.<br />
                         <h3>Intermediário:</h3>
                         VScode,  HTML, CSS, Hardware, Figma e Linux.<br />
                     </span>
