--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo</title>
 
+    <!-- meta -->
+    <meta property="og:title" content="Veja o meu Curriculo">
+    <meta property="og:description" content="algumas informacoes sobre mim">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://lgustavorcaldas.github.io/alpha-ed-tech/curriculo/index.html">
+    <meta property="og:image" content="selfie1.jpg">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
