--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <div>
             <p><a href="curriculo/index.html">Curriculo</a></p>
         </div>
+        <div>
+            <p><a href="resume/index.html">Resume</a></p>
+        </div>
 
     </body>
 </html>
