--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <div>
             <p><a href="resume/index.html">Resume</a></p>
         </div>
+        <div>
+            <p><a href="kakashi/index.html">Kakashi o ninja copiador</a></p>
+        </div>
 
     </body>
 </html>
