--- a/kakashi/index.html
+++ b/kakashi/index.html
@@ -15,14 +15,14 @@
 <body>
     <main class="container">
         <section class="pag-one">
-            <div class="top">
-                <div class="teste">
+            <div class="page-one-bg">
+                <div class="container-bg">
                     <video height="100%" width="100%" autoplay muted loop id="top-bg">
                         <source src="midia/bg.mp4" type="video/mp4" id="video">
                     </video>
                 </div>
             </div>
-            <div class="mid"> 
+            <div class="page-one-top"> 
                 <header class="head">
                     <div class="logo">
                         <img src="midia/icon.png">
@@ -45,22 +45,28 @@
                                 ATENDIMENTO
                             </li>
                         </ul>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M5 22h14a2 2 0 0 0 2-2V9a1 1 0 0 0-1-1h-3v-.777c0-2.609-1.903-4.945-4.5-5.198A5.005 5.005 0 0 0 7 7v1H4a1 1 0 0 0-1 1v11a2 2 0 0 0 2 2zm12-12v2h-2v-2h2zM9 7c0-1.654 1.346-3 3-3s3 1.346 3 3v1H9V7zm-2 3h2v2H7v-2z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M5 22h14a2 2 0 0 0 2-2V9a1 1 0 0 0-1-1h-3v-.777c0-2.609-1.903-4.945-4.5-5.198A5.005 5.005 0 0 0 7 7v1H4a1 1 0 0 0-1 1v11a2 2 0 0 0 2 2zm12-12v2h-2v-2h2zM9 7c0-1.654 1.346-3 3-3s3 1.346 3 3v1H9V7zm-2 3h2v2H7v-2z"></path></svg>
                     </div>
                 </header>
-                <div class="king">
-                    <h1>OS REIS</h1>
-                    <h1 style="color: white;">DA PISTA</h1>
+                <div class="page-one-mid">
+                    <div class="king">
+                        <h1>OS REIS</h1>
+                        <h1 style="color: white;">DA PISTA</h1>
+                    </div>
                     <div class="buy">
                         <span>COMPRAR</span>
                     </div>
                 </div>
+                
             </div>
         </section>
         <section class="page-two">
             <div class="page-two-one">
                 <div class="page-two-one-left">
-                    <span style="font-weight: bold ;font-size: 52px; text-align: left; color: #4bd1a0;">NOVA</span><span style="font-weight: bold ;font-size: 52px; text-align: left;"><br />COLE-<br />ÇÃO</span>
+                    <div class="nova-co">
+                        <span style="font-weight: bold ;font-size: 52px; text-align: left; color: #4bd1a0;">NOVA</span>
+                        <span style="font-weight: bold ;font-size: 52px; text-align: left;">COLE-<br />ÇÃO</span>
+                    </div>
                     <div class="ver-todas">
                         <span>VER TODAS</span>
                     </div>
@@ -77,39 +83,41 @@
             </div>
         </section>
         <section class="page-three">
-            <div class="page-three-left">
-                <span style="font-weight: bold ;font-size: 52px; text-align: center; color: white;">QUEM<br/>SOMOS</span>
-            </div>
-            <div class="page-three-mid">
-                <div>
-                    Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto.É fácil! Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo. Sou um ótimo lugar para você contar sua história e permitir que seus clientes saibam um pouco mais sobre você.
+            <div class="page-three-box">
+                <div class="page-three-left">
+                    <span style="font-weight: bold ;font-size: 52px; text-align: center; color: white;">QUEM<br/>SOMOS</span>
                 </div>
-            </div>
-            <div class="page-three-right">
-                <div class="nossa-his">
-                    <span>NOSSA HISTÓRIA</span>
+                <div class="page-three-mid">
+                    <div>
+                        Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto.É fácil! Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo. Sou um ótimo lugar para você contar sua história e permitir que seus clientes saibam um pouco mais sobre você.
+                    </div>
+                </div>
+                <div class="page-three-right">
+                    <div class="nossa-his">
+                        <span>NOSSA HISTÓRIA</span>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="page-four">
-            <div style="font-weight: 800;font-size: 52px; text-align: center;">
+            <div style="font-weight: 800;font-size: 44px; text-align: center;">
                 FALE CONOSCO
             </div>
         </section>
         <footer class="page-five">
             <div class="page-five-left">
                 <ul>
-                    <il>FAQ</il>
-                    <il>Novidades</il>
-                    <il>Contato</il>
+                    <il><a href="#">FAQ</a></il>
+                    <il><a href="#">Novidades</a></il>
+                    <il><a href="#">Contato</a></il>
                 </ul>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: #4bd1a0;transform: ;msFilter:;"><path d="M12 22c5.514 0 10-4.486 10-10S17.514 2 12 2 2 6.486 2 12s4.486 10 10 10zm0-15 5 5h-4v5h-2v-5H7l5-5z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: #4bd1a0;transform: ;msFilter:;"><path d="M12 22c5.514 0 10-4.486 10-10S17.514 2 12 2 2 6.486 2 12s4.486 10 10 10zm0-15 5 5h-4v5h-2v-5H7l5-5z"></path></svg>
                 <p>Voltar ao topo</p>
             </div>
             <div class="page-five-right">
-                <p style="font-weight: 800;">Assine para receber novidades</p>    
+                <p style="font-weight: 800;height: 0px;">Assine para receber novidades</p>    
                 <div class="email">
-                    <p>Insira o seu email aqui*</p>
+                    <input type="text" id="email-box" name="email-text" placeholder="Insira o seu email aqui*">
                     <p>Participar</p>
                 </div>
                 <div class="contact">
