--- a/kakashi/index.html
+++ b/kakashi/index.html
@@ -111,13 +111,15 @@
                     <il><a href="#">Novidades</a></il>
                     <il><a href="#">Contato</a></il>
                 </ul>
-                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: #4bd1a0;transform: ;msFilter:;"><path d="M12 22c5.514 0 10-4.486 10-10S17.514 2 12 2 2 6.486 2 12s4.486 10 10 10zm0-15 5 5h-4v5h-2v-5H7l5-5z"></path></svg>
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: #4bd1a0;transform: ;msFilter:;"><path d="M12 22c5.514 0 10-4.486 10-10S17.514 2 12 2 2 6.486 2 12s4.486 10 10 10zm0-15 5 5h-4v5h-2v-5H7l5-5z"></path></svg></a>
                 <p>Voltar ao topo</p>
             </div>
             <div class="page-five-right">
                 <p style="font-weight: 800;height: 0px;">Assine para receber novidades</p>    
                 <div class="email">
-                    <input type="text" id="email-box" name="email-text" placeholder="Insira o seu email aqui*">
+                    <div>
+                        <input type="text" id="email-box" name="email-text" placeholder="Insira o seu email aqui*">
+                    </div>
                     <p>Participar</p>
                 </div>
                 <div class="contact">
