--- a/kakashi/index.html
+++ b/kakashi/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Template Loja de Skate | WIX</title>
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!--CSS-->
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
+    <div class="kakashi">Site copiado de um template do WIX: <a href="https://pt.wix.com/website-template/view/html/1733?siteId=63520453-0515-49d1-85a2-8bf1ef62d78d&metaSiteId=5a793c05-4d0a-4f4f-93f5-063ca0021b15&originUrl=https%3A%2F%2Fpt.wix.com%2Fwebsite%2Ftemplates%2Fhtml%2Fonline-store" target="_blanked">Link</a></div>
     <main class="container">
         <section class="pag-one">
             <div class="page-one-bg">
