--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         <div>
             <p><a href="kakashi/index.html">Kakashi o ninja copiador</a></p>
         </div>
+        <div>
+            <p><a href="kakashi-ninja-copiador-ataca-novamente/">Kakashi o ninja copiador ataca novamente</a></p>
+        </div>
 
     </body>
 </html>
