--- a/index.html
+++ b/index.html
@@ -28,46 +28,46 @@
         <h1 style="font-size: 30px;">This is the place use to surf by my folders!</h1>
         <div class="primeiro">
             <i class='bx bx-video'></i>
-            <a href="audio-video.html">Brincando com as Tags Audio e Video</a>
+            <a href="audio-video.html" target="_blank">Brincando com as Tags Audio e Video</a>
         </div>
         <div>
-            <p><a href="cadastro-simples.html">Brincando com o Forms </a></p>
+            <p><a href="cadastro-simples.html" target="_blank">Brincando com o Forms </a></p>
         </div>
         <div>
-            <p><a href="os-harpistas.html">Brincando com o desgin do site</a></p>
+            <p><a href="os-harpistas.html" target="_blank">Brincando com o desgin do site</a></p>
         </div>
         <div>
-            <p><a href="html1.html">Brincando com a Tag table</a></p>
+            <p><a href="html1.html" target="_blank">Brincando com a Tag table</a></p>
         </div>
         <div>
-            <p><a href="login.html">Tentando fazer uma pagina de login</a></p>
+            <p><a href="login.html" target="_blank">Tentando fazer uma pagina de login</a></p>
         </div>
         <div>
-            <p><a href="site.html">Aqui eu fiz um site daora</a></p>
+            <p><a href="site.html" target="_blank">Aqui eu fiz um site daora</a></p>
         </div>
         <div>
-            <p><a href="iframe.html">Testando um pouco o iframe</a></p>
+            <p><a href="iframe.html" target="_blank">Testando um pouco o iframe</a></p>
         </div>
         <div>
-            <p><a href="canvas.html">Aqui é uma brincadeira com canvas</a></p>
+            <p><a href="canvas.html" target="_blank">Aqui é uma brincadeira com canvas</a></p>
         </div>
         <div>
-            <p><a href="cc-teste/css-teste.html">Barra interativa</a></p>
+            <p><a href="cc-teste/css-teste.html" target="_blank">Barra interativa</a></p>
         </div>
         <div>
-            <p><a href="parallax/testando.html">Parallax</a></p>
+            <p><a href="parallax/testando.html" target="_blank">Parallax</a></p>
         </div>
         <div>
-            <p><a href="curriculo/index.html">Curriculo</a></p>
+            <p><a href="curriculo/index.html" target="_blank">Curriculo</a></p>
         </div>
         <div>
-            <p><a href="resume/index.html">Resume</a></p>
+            <p><a href="resume/index.html" target="_blank">Resume</a></p>
         </div>
         <div>
-            <p><a href="kakashi/index.html">Kakashi o ninja copiador</a></p>
+            <p><a href="kakashi-ninja-copiador/" target="_blank">Kakashi o ninja copiador</a></p>
         </div>
         <div>
-            <p><a href="kakashi-ninja-copiador-ataca-novamente/">Kakashi o ninja copiador ataca novamente</a></p>
+            <p><a href="kakashi-ninja-copiador-ataca-novamente/" target="_blank">Kakashi o ninja copiador ataca novamente</a></p>
         </div>
 
     </body>
