--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <div>
             <p><a href="kakashi-ninja-copiador-ataca-novamente/" target="_blank">Kakashi o ninja copiador ataca novamente</a></p>
         </div>
+        <div>
+            <p><a href="tarefinha/index.html" target="_blank">Tarefinha</a></p>
+        </div>
 
     </body>
 </html>
