--- a/tarefa22-11-21/index.html
+++ b/tarefa22-11-21/index.html
@@ -11,41 +11,43 @@
 <body>
     <main id="container">
         <header>
-            <div>
+            <div id="head">
                 <p id="titulo">C E I A <span style="font-size: 16px;font-style: italic;">Ent.</span></p>
                 <span style="font-size: 24px; font-style: italic;">"todos que tenham a mesma fome, todos que tenham a mesma sede, sentem-se à mesa."</span>
             </div>
         </header>
-        <section>
-            <img src="assets/djonga.webp" width="300px" height="300px">
-            <img src="assets/tashatracie.jpg" width="300px" height="300px">
-            <img src="assets/febem.jpg" width="300px" height="300px">
+        <section><br />
+            <div>
+                <img src="assets/djonga.webp" width="300px" height="300px">
+                <img src="assets/tashatracie.jpg" width="300px" height="300px">
+                <img src="assets/febem.jpg" width="300px" height="300px">
+            </div>
+            <div>
+                <img src="assets/kyan.jpg" width="300px" height="300px">
+                <img src="assets/clara.jpg" width="300px" height="300px">
+                <img src="assets/don.jfif" width="300px" height="300px">
+            </div>
+            <div id="txt">
+                <p>A CEIA é um selo de rap criado por Don Cesão(Um dos nomes mais fortes no rap em 2000~2010).</p>
+                <span>A ideia era fazer um selo com poucos artistas para poder dar o foco necessario para a carreira de cada um deles.</span><br />
+                <span>Cesao conseguiu juntar nomes muito fortes do RAP: Djonga, Tasha e Tracie, Febem, Kyan, Clara lima e Don Cesao.</span><br />
+                <h3 style="margin: 5px 0 10px">Algumas recomendações de musicas:</h3>
+                <a href="https://youtu.be/qxXr2CYjHl8">Djonga - Hoje Não<span></span></a><br />
+                <a href="https://youtu.be/5PNBIlUd7q0">Tasha & Tracie - SUV feat. Yunk Vino (Prod. Mu540)<span></span></a><br />
+                <a href="https://youtu.be/MvBH4wXmc5U">FEBEM - CRIME prod. CESRV<span></span></a><br />
+                <a href="https://youtu.be/F2MDh2FjUSs">Kyan - Tropa da Lacoste<span></span></a><br />
+                <a href="https://youtu.be/Kz4BHVMcy44">Clara Lima - Filha do Sol (Prod. Slim)<span></span></a><br />
+                <a href="https://youtu.be/Lj5PL-r-GLM">DonCesão - "Homem de Lata" (Part. Hot & Oreia)<span></span></a><br />
+            </div><br /><br />
         </section>
-        <section>
-            <img src="assets/kyan.jpg" width="300px" height="300px">
-            <img src="assets/clara.jpg" width="300px" height="300px">
-            <img src="assets/don.jfif" width="300px" height="300px">
-        </section>
-        <div id="txt">
-            <p>A CEIA é um selo de rap criado por Don Cesão(Um dos nomes mais fortes no rap em 2000~2010).</p>
-            <span>A ideia era fazer um selo com poucos artistas para poder dar o foco necessario para a carreira de cada um deles.</span><br />
-            <span>Cesao conseguiu juntar nomes muito fortes do RAP: Djonga, Tasha e Tracie, Febem, Kyan, Clara lima e Don Cesao.</span><br />
-            <h3 style="margin: 5px 0 10px">Algumas recomendações de musicas:</h3>
-            <a href="https://youtu.be/qxXr2CYjHl8">Djonga - Hoje Não<span></span></a><br />
-            <a href="https://youtu.be/5PNBIlUd7q0">Tasha & Tracie - SUV feat. Yunk Vino (Prod. Mu540)<span></span></a><br />
-            <a href="https://youtu.be/MvBH4wXmc5U">FEBEM - CRIME prod. CESRV<span></span></a><br />
-            <a href="https://youtu.be/F2MDh2FjUSs">Kyan - Tropa da Lacoste<span></span></a><br />
-            <a href="https://youtu.be/Kz4BHVMcy44">Clara Lima - Filha do Sol (Prod. Slim)<span></span></a><br />
-            <a href="https://youtu.be/Lj5PL-r-GLM">DonCesão - "Homem de Lata" (Part. Hot & Oreia)<span></span></a><br />
-        </div>
-    </main><br /><br />
+    </main>
     <footer>
         <div id="fot">
             <img id="pic" src="assets/pic.jpg"></img>
             <div>
-                <p id="name">Luiz Gustavo</p>
-                <p id="age">22</p>
-                <p id="state">São Paulo</p>
+                <h3 id="name">Luiz Gustavo</h3>
+                <h3 id="age">22</h3>
+                <h3 id="state">São Paulo</h3>
             </div>
         </div>
     </footer>
