--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         <div>
             <p><a href="tarefinha/index.html" target="_blank">Tarefinha</a></p>
         </div>
+        <div>
+            <p><a href="tarefa24-11-21/index.html" target="_blank">Tarefinha24-11</a></p>
+        </div>
 
     </body>
 </html>
