--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <div>
             <p><a href="tarefa24-11-21/index.html" target="_blank">Tarefinha24-11</a></p>
         </div>
+        <div>
+            <p><a href="calculadora/index.html" target="_blank">Calculadora</a></p>
+        </div>
 
     </body>
 </html>
