--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="Calculadora GlassMorphismo" />
+    <meta property="og:type" content="blog" />
+    <meta property="og:url" content="https://lgustavorcaldas.github.io/alpha-ed-tech/calculadora/index.html" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/84547544/143350121-e5d0e077-db66-48c9-b50b-d56d3209f02e.png" />
+
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
