--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:title" content="Calculadora GlassMorphismo" />
-    <meta property="og:type" content="blog" />
+    <meta property="og:type" content="article" />
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+    <meta property="og:description" content="Brincando com glassmorphismo e javascript">
     <meta property="og:url" content="https://lgustavorcaldas.github.io/alpha-ed-tech/calculadora/index.html" />
     <meta property="og:image" content="https://user-images.githubusercontent.com/84547544/143350121-e5d0e077-db66-48c9-b50b-d56d3209f02e.png" />
 
