--- a/subway/index.html
+++ b/subway/index.html
@@ -23,42 +23,44 @@
             <form action="get">
                 <p>
                     <b>Opção de Pão:</b><br />
-                    <input type="radio" id="bread-one" name="breadtype" value="3">
-                    <label for="bread-one">Pão Francês (R$3,00)</label>
-                    <input type="radio" id="bread-two" name="breadtype" value="8">
-                    <label for="bread-two">Pão Australiano (R$8,00)</label>
-                    <input type="radio" id="bread-three" name="breadtype" value="6">
-                    <label for="bread-three">Pão de Brioche (R$6,00)</label>
+                    <input type="radio" id="breadone" name="breadtype">
+                    <label for="breadone">Pão Francês (R$3,00)</label>
+                    <input type="radio" id="breadtwo" name="breadtype">
+                    <label for="breadtwo">Pão Australiano (R$8,00)</label>
+                    <input type="radio" id="breadthree" name="breadtype">
+                    <label for="breadthree">Pão de Brioche (R$6,00)</label>
                 </p>
                 <p>
                     <b>Opção de Hambúrguer:</b><br />
-                    <input type="radio" id="burguer-one" name="burguertype" value="13">
-                    <label for="burguer-one">Búrguer de Picanha (R$13,00)</label>
-                    <input type="radio" id="burguer-two" name="burguertype" value="10">
-                    <label for="burguer-two">Búrguer de Costela (R$10,00)</label>
-                    <input type="radio" id="burguer-three" name="burguertype" value="12">
-                    <label for="burguer-three">Búrguer Vegano (R$12,00)</label>
+                    <input type="radio" id="burguerone" name="burguertype">
+                    <label for="burguerone">Búrguer de Picanha (R$13,00)</label>
+                    <input type="radio" id="burguertwo" name="burguertype">
+                    <label for="burguertwo">Búrguer de Costela (R$10,00)</label>
+                    <input type="radio" id="burguerthree" name="burguertype">
+                    <label for="burguerthree">Búrguer Vegano (R$12,00)</label>
                 </p>
                 <p>
                     <b>Opção de Salada:</b><br />
-                    <input type="radio" id="salad-one" name="saladtype" value="1.5">
-                    <label for="salad-one">Alface (R$1,50)</label>
-                    <input type="radio" id="salad-two" name="saladtype" value="1.5">
-                    <label for="salad-two">Tomate (R$1,50)</label>
-                    <input type="radio" id="salad-three" name="saladtype" value="0.0">
-                    <label for="salad-three">Sem Salada (R$0,00)</label>
+                    <input type="radio" id="saladone" name="saladype">
+                    <label for="saladone">Alface (R$1,50)</label>
+                    <input type="radio" id="saladtwo" name="saladype">
+                    <label for="saladtwo">Tomate (R$1,50)</label>
+                    <input type="radio" id="saladthree" name="saladype">
+                    <label for="saladthree">Sem Salada (R$0,00)</label>
                 </p>
                 <p>
                     <b>Opção de Queijo:</b><br />
-                    <input type="radio" id="cheese-one" name="cheesetype" value="3">
-                    <label for="cheese-one">Mussarela (R$3,00)</label>
-                    <input type="radio" id="cheese-two" name="cheesetype" value="3">
-                    <label for="cheese-two">Prato (R$3,00)</label>
-                    <input type="radio" id="cheese-three" name="cheesetype" value="5">
-                    <label for="cheese-three">Cheddar (R$5,00)</label>
+                    <input type="radio" id="cheeseone" name="cheesetype">
+                    <label for="cheeseone">Mussarela (R$3,00)</label>
+                    <input type="radio" id="cheesetwo" name="cheesetype">
+                    <label for="cheesetwo">Prato (R$3,00)</label>
+                    <input type="radio" id="cheesethree" name="cheesetype">
+                    <label for="cheesethree">Cheddar (R$5,00)</label>
                 </p>
                 <input type="button" name="" id="input-btn" onclick="func()" value="Finalizou?">
-                <p id="demo"></p>
+                <div id="demo-box">
+                <span id="demo"></span>
+                </div>
             </form>
         </main>
     </section>
