--- a/tarefa30-11-21/index.html
+++ b/tarefa30-11-21/index.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button type="button" onclick="{btnRuns(10)}">10</button>
-    <button type="button" onclick="{btnRuns(70)}">70</button>
-    <button type="button" onclick="{btnRuns(160)}">160</button>
-    <div id="demo"></div>
+    <main>
+        <header id="btn-header">
+            <button type="button" onclick="{btnRuns(10)}">10</button>
+            <button type="button" onclick="{btnRuns(70)}">70</button>
+            <button type="button" onclick="{btnRuns(160)}">160</button>
+        </header>
+        <div id="pedro"></div>
+        <div id="juca"></div>
+        <div id="edna"></div>
+    </main>
 
 <script src="javascript.js"></script>
 </body>
