--- a/tarefa02-12-21/index.html
+++ b/tarefa02-12-21/index.html
@@ -10,10 +10,10 @@
 <body>
     <h3>Armazenar os números digitados:</h3>
     <main>
-        <input type="number" class=inputs id="one" placeholder="1º Valor" />
-        <input type="number" class=inputs id="two" placeholder="2º Valor" />
-        <input type="number" class=inputs id="three" placeholder="3º Valor" />
-        <input type="number" class=inputs id="four" placeholder="4º Valor" />
+        <input type="number" class='inputs' id="one" placeholder="1º Valor" />
+        <input type="number" class='inputs' id="two" placeholder="2º Valor" />
+        <input type="number" class='inputs' id="three" placeholder="3º Valor" />
+        <input type="number" class='inputs' id="four" placeholder="4º Valor" />
     </main>
     <div>
         <button class=buttons onclick="invert()">Inverter</button>
