--- a/03-12-2021/index.html
+++ b/03-12-2021/index.html
@@ -10,21 +10,18 @@
 </head>
 <body>
     <div class="board" id="board">
-        <div class="cell x" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-
+        <div class="box" onclick="changeMatrix(0,0)"></div>
+        <div class="box" onclick="changeMatrix(0,1)"></div>
+        <div class="box" onclick="changeMatrix(0,2)"></div>
+        <div class="box" onclick="changeMatrix(1,0)"></div>
+        <div class="box" onclick="changeMatrix(1,1)"></div>
+        <div class="box" onclick="changeMatrix(1,2)"></div>
+        <div class="box" onclick="changeMatrix(2,0)"></div>
+        <div class="box" onclick="changeMatrix(2,1)"></div>
+        <div class="box" onclick="changeMatrix(2,2)"></div>
     </div>
     <div class="winning-message">
-        <div data-winning-message-text>
-
-        </div>
+        <span id="demo"></span>
         <button id="restartButton">Restart</button>
     </div>
 </body>
