--- a/allStarsCarrinho/index.html
+++ b/allStarsCarrinho/index.html
@@ -14,7 +14,23 @@
             <button type="button" onclick="{btnRuns(70)}">70</button>
             <button type="button" onclick="{btnRuns(160)}">160</button>
         </section>
-        <div id="demo"></div>
+        <section id="flag">
+            <div class="street">
+                <h1>Pedro</h1>
+                <span id="winPedro"></span>
+                <div id="carPedro"></div>
+            </div>
+            <div class="street">
+                <h1>Juca</h1>
+                <span id="winJuca"></span>
+                <div id="carJuca"></div>
+            </div>
+            <div class="street">
+                <h1>Edna</h1>
+                <span id="winEdna"></span>
+                <div id="carEdna"></div>
+            </div>
+        </section>
     </main>
 
 <script src="javascript.js"></script>
